--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
     <section class="profile page__section">
       <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)"></div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title" id="profile-title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button" id="edit-button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description" id="profile-description">Исследователь океана</p>
       </div>
       <button class="profile__add-button" type="button" id="add-button"></button>
     </section>
@@ -66,7 +66,7 @@
 <!-- <script src="./scripts/cards.js"></script>
 <script src="./scripts/index.js" defer></script> -->
 
-<template id="card-template">ы
+<template id="card-template">
   <li class="places__item card">
     <img class="card__image" src="" alt="" />
     <button type="button" class="card__delete-button"></button>
